--- a/laboratoire/src/app/app.component.html
+++ b/laboratoire/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-member-list></app-member-list>
+
+<div>
+  <button mat-button routerLink="/members">List</button>
+  <button mat-button routerLink="/from">From</button>
+</div>
+
+<router-outlet></router-outlet>
