--- a/laboratoire/src/app/member-list/member-list.component.html
+++ b/laboratoire/src/app/member-list/member-list.component.html
@@ -1,3 +1,6 @@
+<div fxLayout="row" fxLayoutAlign="end center">
+  <button mat-raised-button color="primary" >+ Create Member</button>
+</div>
 <table
   mat-table
   [dataSource]="datasource"
